# rust-ecosystem

./: .gitignore  Cargo.toml
actix-web-api/: .env.example  Cargo.toml  README.md  run_migrations.sh
actix-web-api/migration/: Cargo.toml
actix-web-api/migration/src/: lib.rs  m20240101_000001_create_users_table.rs
actix-web-api/src/: db.rs  main.rs
actix-web-api/src/entities/: mod.rs  user.rs
actix-web-api/src/errors/: mod.rs
actix-web-api/src/handlers/: user_handler.rs
actix-web-api/src/models/: user.rs
actix-web-api/src/repositories/: mod.rs  postgres_user_repository.rs  user_repository.rs
actix-web-api/src/routes/: mod.rs  user_routes.rs
actix-web-api/src/services/: user_service.rs
actix-web-api/src/utils/: validation.rs
leet-code/: Cargo.toml  README.md  binary_search.rs  contains_duplicate.rs  diameter_of_tree.rs  first_occurence.rs  group_anagram.rs  is_anagram.rs  is_palindrome.rs  max_depth.rs  merge_two_list.rs  min_start_value.rs  reverse_linked_list.rs  sell_stock.rs  tree_balanced.rs  two_sum.rs  valid_parentheses.rs
rust-basics/: Cargo.toml
rust-basics/src/: errors.rs  lifetimes.rs  macros.rs  main.rs  smart_pointers.rs  traits.rs
