[package]
name = "leet-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is_palindrome"
path = "is_palindrome.rs"

[[bin]]
name = "sell_stock"
path = "sell_stock.rs"

[[bin]]
name = "two_sum"
path = "two_sum.rs"

[[bin]]
name = "first_occurence"
path = "first_occurence.rs"

[[bin]]
name = "contains_duplicate"
path = "contains_duplicate.rs"

[[bin]]
name = "is_anagram"
path = "is_anagram.rs"

[[bin]]
name = "min_start_value"
path = "min_start_value.rs"

[[bin]]
name = "group_anagram"
path = "group_anagram.rs"

[[bin]]
name = "valid_parentheses"
path = "valid_parentheses.rs"

[[bin]]
name = "binary_search"
path = "binary_search.rs"

[[bin]]
name = "reverse_linked_list"
path = "reverse_linked_list.rs"

[[bin]]
name = "merge_two_list"
path = "merge_two_list.rs"

[[bin]]
name = "max_depth"
path = "max_depth.rs"

[[bin]]
name = "diameter_of_tree"
path = "diameter_of_tree.rs"