[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = "1.0"
tokio = { version = "1.46.1", features = ["full"] }


[dependencies.sea-orm]
version = "1.0"
features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
]
